--- a/styles.css
+++ b/styles.css
@@ -22,27 +22,35 @@ html::-webkit-scrollbar {
   color: #fff;
 }
 
-/* Text area auto resize code */
-.grow-wrap {
-  display: grid;
+.textarea-container {
+  --background-color: var(--form-element-background-color);
+  --border-color: var(--form-element-border-color);
+  --color: var(--form-element-color);
+  --box-shadow: none;
+  border: var(--border-width) solid var(--border-color);
+  border-radius: var(--border-radius);
+  outline: 0;
+  background-color: var(--background-color);
+  box-shadow: var(--box-shadow);
+  color: var(--color);
+  font-weight: var(--font-weight);
+  transition: background-color var(--transition), border-color var(--transition),
+    color var(--transition), box-shadow var(--transition);
+  padding: 20px;
+  margin-bottom: 20px;
+  width: 100%;
 }
-.grow-wrap::after {
-  content: attr(data-replicated-value) " ";
-  white-space: pre-wrap;
-  margin: 10px 0 !important;
-  visibility: hidden;
-}
-.grow-wrap > .body-textarea {
+.body-textarea {
+  border: none;
   resize: none;
-  overflow: hidden;
+  width: 100%;
 }
-.grow-wrap > .body-textarea,
-.grow-wrap::after {
-  padding: 0.5rem;
-  font: inherit;
-  grid-area: 1 / 1 / 2 / 2;
+.blue-highlight {
+  background-color: #11556b !important;
 }
-
+.darker-highlight {
+  background-color: #524d12 !important;
+}
 .card {
   margin: 0 auto;
 }
